--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
-    "illuminate/database": "~4.2|^5|^6|^7",
-    "illuminate/config": "~4.2|^5|^6|^7",
-    "nesbot/carbon": "~1.0|~2",
-    "elasticsearch/elasticsearch": "~6.1"
+    "php": ">=7.1.0",
+    "illuminate/database": "^7",
+    "illuminate/config": "^7",
+    "nesbot/carbon": "~2",
+    "elasticsearch/elasticsearch": "^v7.8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.2|~5.0|~8.0",
-    "mockery/mockery": "^0.9.4|^1.0"
+    "phpunit/phpunit": "~8.0",
+    "mockery/mockery": "^1.0"
   },
   "autoload": {
     "psr-4": {
